feat: create table and text

--- a/css/style.css
+++ b/css/style.css
@@ -71,4 +71,20 @@
     list-style-position: inside;
   }
   
- 
+  #table-content {
+    border-collapse: collapse;
+  }
+  
+  #table-content thead {
+    background-color: #20a9e5;
+    text-align: left;
+    color: #FFFFFF;
+  }
+  
+  #table-content .main-col {
+    width: 50%;
+  }
+  
+  #table-content .odd {
+    background-color: #b1e5f2;
+  }
