--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,26 @@
     background-color: #b1e5f2;
   }
 
+
+  
+  .box-image {
+    width: 210px;
+    height: 160px;
+    background-color: red;
+    margin-bottom: 10px;
+    color: #FFFFFF;
+    padding: 12px;
+    font-size: 17px;
+    font-weight: bold;
+  }
+  
+  #image-a {
+    background-image: url('../img/monitor.jpg');
+    background-size: cover;
+  }
+  
+  #image-b {
+    background-image: url('../img/graph.jpg');
+  }
+
+
